<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:paddingHorizontal="10dp"
    android:paddingVertical="20dp"
    android:background="@drawable/login_custom_border"
    android:layout_gravity="center"
    android:elevation="10dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/belgrano"
                android:paddingLeft="12dp"
                android:text="REGISER"
                android:textColor="#1E989E"
                android:shadowColor="#92E7EC"
                android:shadowDx="5"
                android:shadowDy="5"
                android:shadowRadius="5"
                android:textSize="40dp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tv_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/akaya_telivigala"
                android:text="@string/contentTitle"
                android:paddingLeft="@dimen/paddingTitle"
                android:textColor="#31B4BA"
                android:shadowColor="#92E7EC"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="4"
                android:textSize="@dimen/textSizeContent"
                android:textStyle="italic"/>
        </LinearLayout>
        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/img_lineAnimate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/lineanimate"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/paddingActivity"
        android:layout_marginTop="@dimen/marginBox"
        >
        <EditText
            android:id="@+id/ed_surname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.45"
            android:hint="@string/hintSurname"
            android:textSize="@dimen/textSizeEditText"
            android:layout_marginRight="@dimen/marginEditText"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="#42ADB3"
            android:background="@drawable/custom_login_edit_text"
            android:paddingLeft="@dimen/paddingLeftEditText"
            android:paddingTop="@dimen/paddingEditText"
            android:paddingBottom="@dimen/paddingEditText"
            android:paddingRight="@dimen/paddingEditText"

            />
        <EditText
            android:id="@+id/ed_firstName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:hint="@string/hintName"
            android:textColorHint="#42ADB3"
            android:textSize="@dimen/textSizeEditText"
            android:textColor="@color/black"
            android:inputType="text"
            android:background="@drawable/custom_login_edit_text"
            android:paddingLeft="@dimen/paddingLeftEditText"
            android:paddingTop="@dimen/paddingEditText"
            android:paddingBottom="@dimen/paddingEditText"
            android:paddingRight="@dimen/paddingEditText"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/paddingActivity"
        >
        <EditText
            android:id="@+id/ed_phone_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hintPhoneOrEmail"
            android:textColorHint="#42ADB3"
            android:textColor="@color/black"
            android:textSize="@dimen/textSizeEditText"
            android:background="@drawable/custom_login_edit_text"
            android:layout_marginTop="@dimen/marginTopEdText"
            android:paddingLeft="@dimen/paddingLeftEditText"
            android:paddingTop="@dimen/paddingEditText"
            android:paddingBottom="@dimen/paddingEditText"
            android:paddingRight="@dimen/paddingEditText"

            />
        <EditText
            android:id="@+id/ed_userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="Username"
            android:textColorHint="#42ADB3"
            android:textColor="@color/black"
            android:textSize="@dimen/textSizeEditText"
            android:background="@drawable/custom_login_edit_text"
            android:layout_marginTop="@dimen/marginTopEdText"
            android:paddingLeft="@dimen/paddingLeftEditText"
            android:paddingTop="@dimen/paddingEditText"
            android:paddingBottom="@dimen/paddingEditText"
            android:paddingRight="@dimen/paddingEditText"

            />
        <EditText
            android:id="@+id/ed_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hintPass"
            android:textColorHint="#42ADB3"
            android:textSize="@dimen/textSizeEditText"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:layout_marginTop="@dimen/marginTopEdText"
            android:background="@drawable/custom_login_edit_text"
            android:paddingLeft="@dimen/paddingLeftEditText"
            android:paddingTop="@dimen/paddingEditText"
            android:paddingBottom="@dimen/paddingEditText"
            android:paddingRight="@dimen/paddingEditText"

            />
    </LinearLayout>

    <carbon.widget.Button
        android:id="@+id/btn_register"
        android:layout_width="@dimen/widthButton"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/custom_button_login"
        android:layout_marginTop="@dimen/marginTopButton"
        android:textAllCaps="false"
        android:textColor="@color/white"

        android:textStyle="bold"
        android:textSize="@dimen/textSizeButton"
        android:layout_marginBottom="20dp"

        app:carbon_cornerRadius="20dp"
        app:carbon_elevation="10dp"
        app:carbon_elevationShadowColor="#EC4B80"
        app:carbon_font="@font/acme"
        app:carbon_fontFamily="@font/acme"
        app:carbon_htmlText="@string/textButton"
        />


</LinearLayout>